--- a/ReservationApp/ReservationApp/Views/Account/Login.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/Login.cshtml
@@ -1,10 +1,10 @@
-﻿@model RegisterViewModel
+﻿@model LoginViewModel
 
 @{
-	ViewBag.Title = "User registration";
+	ViewBag.Title = "User login";
 }
 
-<h1>User registration</h1>
+<h1>User login</h1>
 <div class="row">
 	<div class="col-md-12">
 		<form method="post">
@@ -20,12 +20,15 @@
 				<span asp-validation-for="Password" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<label asp-for="ConfirmPassword"></label>
-				<input asp-for="ConfirmPassword" class="form-control" />
-				<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+				<div class="checkbox">
+					<label asp-for="RememberMe">
+					<input asp-for="RememberMe"/>
+					@Html.DisplayNameFor(m => m.RememberMe)
+					</label>
+				</div>			
 			</div>
-			<button type="submit" class="btn btn-primary">Register</button>
+			<button type="submit" class="btn btn-primary">Login</button>
 		</form>
-	</div>
+	</div>"
 
 </div>
