--- a/ReservationApp/ReservationApp/Views/Home/Index.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
-﻿@{
+﻿@model List<Reservation>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1>Lista rezerwacji</h1>
+<div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>City</th>
+                <th>Owner</th>
+                <th>Room</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var reservation in Model)
+            {
+                <tr>
+                    <td>@reservation.Date.ToShortDateString()</td>
+                    <td>@reservation.City</td>
+                    <td>@reservation.Owner</td>
+                    <td>@reservation.Room</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
