--- a/ReservationApp/ReservationApp/Views/_ViewImports.cshtml
+++ b/ReservationApp/ReservationApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ReservationApp
 @using ReservationApp.Models
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
