--- a/ReservationApp/ReservationApp/Views/Home/Index.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
                     <td>@reservation.City</td>
                     <td>@reservation.Owner</td>
                     <td>@reservation.Room</td>
+                    <td><a class="btn btn-outline-info" asp-controller="Home" asp-action="Details" asp-route-id=@reservation.Id>Details</a></td>
                 </tr>
             }
         </tbody>
