--- a/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
+++ b/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
@@ -22,14 +22,13 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
+                        </li>                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Create new</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistics</a>
                         </li>
-                       
                     </ul>
                     <ul class="navbar-nav ml-auto" >
                         @if(signInManager.IsSignedIn(User))
