Update application view

--- a/ReservationApp/ReservationApp/Views/Home/AccessDenied.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/AccessDenied.cshtml
@@ -3,4 +3,6 @@
 }
 
 <h1>Access Denied</h1>
-<p>Nie masz dostępu do tego zasobu.</p>
+<p>
+    You do not have the required permissions to access this page.
+</p>
