--- a/ReservationApp/ReservationApp/Views/Home/Index.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Lista rezerwacji</h1>
+<h1>Reservations</h1>
 <div>
     <table class="table">
         <thead>
