--- a/ReservationApp/ReservationApp/Views/Account/Login.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/Login.cshtml
@@ -1,34 +1,45 @@
 ﻿@model LoginViewModel
 
 @{
-	ViewBag.Title = "User login";
+	ViewData["Title"] = "Login";
 }
 
-<h1>User login</h1>
-<div class="row">
-	<div class="col-md-12">
-		<form method="post">
-			<div asp-validation-summary="All" class="text-danger"></div>
-			<div class="form-group">
-				<label asp-for="Email"></label>
-				<input asp-for="Email" class="form-control" />
-				<span asp-validation-for="Email" class="text-danger"></span>
-			</div>
-			<div class="form-group">
-				<label asp-for="Password"></label>
-				<input asp-for="Password" class="form-control" />
-				<span asp-validation-for="Password" class="text-danger"></span>
-			</div>
-			<div class="form-group">
-				<div class="checkbox">
-					<label asp-for="RememberMe">
-					<input asp-for="RememberMe"/>
-					@Html.DisplayNameFor(m => m.RememberMe)
-					</label>
-				</div>			
-			</div>
-			<button type="submit" class="btn btn-primary">Login</button>
-		</form>
-	</div>"
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-4 offset-md-4 mt-5">
+			<div class="card">
+				<div class="card-body">
+					<h2 class="text-center">Login</h2>
+					<form method="post" class="custom-form">
+						<div asp-validation-summary="All" class="text-danger"></div>
+						<div class="form-group">
+							<label asp-for="Email" ></label>
+							<input asp-for="Email" class="form-control" />
+							<span asp-validation-for="Email" class="text-danger"></span>
+						</div>
 
+						<div class="form-group">
+							<label asp-for="Password"></label>
+							<input asp-for="Password" class="form-control" />
+							<span asp-validation-for="Password" class="text-danger"></span>
+						</div>
+
+						<div class="form-group">
+							<div class="checkbox">
+								<label asp-for="RememberMe">
+									<input asp-for="RememberMe" />
+									@Html.DisplayNameFor(m => m.RememberMe)
+								</label>
+							</div>
+						</div>
+
+						<div class="my-btn">
+							<button type="submit" class="btn btn-secondary">Login</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+
