--- a/ReservationApp/ReservationApp/Views/Account/Register.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/Register.cshtml
@@ -1,31 +1,40 @@
 ﻿@model RegisterViewModel
 
 @{
-	ViewBag.Title = "User registration";
+	ViewData["Title"] = "Login";
 }
 
-<h1>User registration</h1>
-<div class="row">
-	<div class="col-md-12">
-		<form method="post">
-			<div asp-validation-summary="All" class="text-danger"></div>
-			<div class="form-group">
-				<label asp-for="Email"></label>
-				<input asp-for="Email" class="form-control" />
-				<span asp-validation-for="Email" class="text-danger"></span>
-			</div>
-			<div class="form-group">
-				<label asp-for="Password"></label>
-				<input asp-for="Password" class="form-control" />
-				<span asp-validation-for="Password" class="text-danger"></span>
-			</div>
-			<div class="form-group">
-				<label asp-for="ConfirmPassword"></label>
-				<input asp-for="ConfirmPassword" class="form-control" />
-				<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-			</div>
-			<button type="submit" class="btn btn-primary">Register</button>
-		</form>
-	</div>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-4 offset-md-4 mt-5">
+			<div class="card">
+				<div class="card-body">
+					<h2 class="text-center">Register</h2>
+					<form method="post" class="custom-form">
+						<div asp-validation-summary="All" class="text-danger"></div>
+						<div class="form-group">
+							<label asp-for="Email"></label>
+							<input asp-for="Email" class="form-control" />
+							<span asp-validation-for="Email" class="text-danger"></span>
+						</div>
 
+						<div class="form-group">
+							<label asp-for="Password"></label>
+							<input asp-for="Password" class="form-control" />
+							<span asp-validation-for="Password" class="text-danger"></span>
+						</div>
+
+						<div class="form-group">
+							<label asp-for="ConfirmPassword"></label>
+							<input asp-for="ConfirmPassword" class="form-control" />
+							<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+						</div>
+						<div class="my-btn">
+							<button type="submit" class="btn btn-primary">Register</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
