Implement room selection using dropdown list in Reservation form

--- a/ReservationApp/ReservationApp/Views/Home/Create.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Create.cshtml
@@ -28,14 +28,14 @@
     </div>
 
     <div class="mb-3">
-        <label asp-for="Room"></label>
-        <input class="form-control" asp-for="Room" />
-        <span class="text-danger" asp-validation-for="Room"></span>
+        <label asp-for="RoomId">Room</label>
+        <select class="form-control" asp-for="RoomId" asp-items="@ViewBag.Rooms"></select>
+        <span class="text-danger" asp-validation-for="RoomId"></span>
     </div>
 
     <div class="mb-3">
         <label asp-for="Price"></label>
-        <input class="form-control" asp-for="Price" />
+        <input class="form-control" asp-for="Price"/>
         <span class="text-danger" asp-validation-for="Price"></span>
     </div>
 
