--- a/ReservationApp/ReservationApp/Views/Home/Delete.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Delete.cshtml
@@ -17,7 +17,7 @@
                 <td>@Model.Date</td>
                 <td>@Model.City</td>
                 <td>@Model.Owner</td>
-                <td>@Model.Room</td>
+                <td>@Model.RoomId</td>
             </tr>
         </tbody>
     </table>
