--- a/ReservationApp/ReservationApp/Views/Home/Details.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Details.cshtml
@@ -24,7 +24,7 @@
                 <td>@Model.reservation.City</td>
                 <td>@Model.reservation.Address</td>
                 <td>@Model.reservation.Owner</td>
-                <td>@Model.reservation.Room</td>
+                <td>@Model.reservation.RoomId</td>
                 <td>@Model.reservation.Price</td>
                 <td>@Model.reservation.NumberOfNights</td>
                 <td>@(Model.reservation.Price * Model.reservation.NumberOfNights)</td>
