--- a/ReservationApp/ReservationApp/Views/Account/Register.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/Register.cshtml
@@ -30,7 +30,7 @@
 							<span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 						</div>
 						<div class="my-btn">
-							<button type="submit" class="btn btn-primary">Register</button>
+							<button type="submit" class="btn btn-secondary">Register</button>
 						</div>
 					</form>
 				</div>
