Fix issues with Update method

--- a/ReservationApp/ReservationApp/Views/Home/Update.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Update.cshtml
@@ -3,6 +3,7 @@
 }
 <h1>Update a reservation</h1>
 <form asp-controller="Home" asp-action="Update" method="post">
+    <input type="hidden" asp-for="reservation.Id" />
     <div class="mb-3">
         <label asp-for="reservation.Date">Date</label>
         <input class="form-control" asp-for="reservation.Date" />
