Add functionality to edit user's password and delete user by admin

--- a/ReservationApp/ReservationApp/wwwroot/css/style.css
+++ b/ReservationApp/ReservationApp/wwwroot/css/style.css
@@ -86,7 +86,10 @@ body.night-mode {
         background-color: #333;
         color: #fff;
     }
-         
+
+    body.night-mode .card-header {
+        background-color: #424242;
+    }
 
     body.night-mode .card-body {
         background-color: #333;
@@ -94,6 +97,10 @@ body.night-mode {
 
     body.night-mode .card {
         border-color: #666;
+    }
+
+    body.night-mode .card-footer {
+        background-color: #424242;
     }
 
     body.night-mode .navbar-light.border-bottom {
