--- a/ReservationApp/ReservationApp/Views/Account/Register.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RegisterViewModel
 
 @{
-	ViewData["Title"] = "Login";
+	ViewData["Title"] = "Register";
 }
 
 <div class="container-fluid">
