--- a/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
+++ b/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
@@ -23,13 +23,24 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>                        
-                        <li class="nav-item">
+                        </li>          
+                        @if (signInManager.IsSignedIn(User) && (User.IsInRole("User") || User.IsInRole("Admin")))
+                        {
+                            <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Add new</a>
                         </li>
-                        <li class="nav-item">
+                        }
+                        
+                        @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistics</a>
-                        </li>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListUsers">Users</a>
+                            </li>
+                        }
+                        
                     </ul>
                     <ul class="navbar-nav ml-auto" >
                         @if(signInManager.IsSignedIn(User))
