Add paging to Index view

--- a/ReservationApp/ReservationApp/Views/Home/ListUsers.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/ListUsers.cshtml
@@ -26,7 +26,8 @@
                 <h5 class="card-title">@user.UserName</h5>
             </div>
             <div class="card-footer">
-                <a class="btn btn-outline-primary" asp-controller="Account" asp-action="ChangePassword" asp-route-id=@user.Id>Edit</a>
+                <a class="btn btn-outline-primary" asp-controller="Account" asp-action="ChangePassword" asp-route-id=@user.Id>Change password</a>
+                <a class="btn btn-outline-primary" asp-controller="Account" asp-action="EditRole" asp-route-id=@user.Id>Roles</a>
                 <a class="btn btn-outline-danger" asp-controller="Account" asp-action="DeleteUser" asp-route-id=@user.Id>Delete</a>
             </div>
         </div>
