--- a/ReservationApp/ReservationApp/Views/Home/Index.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model List<Reservation>
+﻿@model PagingList<Reservation>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Reservations";
 }
 
 <h1>Reservations</h1>
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var reservation in Model)
+            @foreach (var reservation in Model.Data)
             {
                 <tr>
                     <td>@reservation.Date.ToShortDateString()</td>
@@ -32,3 +32,47 @@
         </tbody>
     </table>
 </div>
+
+<nav aria-label="Reservations page navigation">
+    <ul class="pagination justify-content-center">
+        @if (Model.IsPrevious)
+        {
+            <li class="page-item">
+                <a class="page-link"
+               asp-controller="Home"
+               asp-action="Index"
+               asp-route-page="@(Model.Page-1)"
+               asp-route-size="@Model.Size">
+                    Previous
+                </a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+            </li>
+        }
+        <li class="page-item disabled">
+            <a class="page-link">@Model.Page</a>
+        </li>
+        @if (Model.IsNext)
+        {
+            <li class="page-item">
+                <a class="page-link"
+               asp-controller="Home"
+               asp-action="Index"
+               asp-route-page="@(Model.Page+1)"
+               asp-route-size="@Model.Size">
+                    Next
+                </a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item disabled">
+                <a class="page-link">Next</a>
+            </li>
+        }
+    </ul>
+</nav>
