--- a/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
+++ b/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListUsers">Users</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RoomsList">Rooms</a>
+                            </li>
                         }
                         
                     </ul>
