--- a/ReservationApp/ReservationApp/Views/Account/ChangePassword.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/ChangePassword.cshtml
@@ -21,7 +21,7 @@
 
                         <div style="text-align: center">
                             <button type="submit" class="btn btn-danger">Change</button>                        
-                            <a asp-action="ListUsers" asp-controller="Home" class="btn btn-secondary">Cancel</a>
+                            <a asp-action="ListUsers" asp-controller="Admin" class="btn btn-secondary">Cancel</a>
                         </div>
                     </form>
                 </div>
