--- a/ReservationApp/ReservationApp/Views/Room/CreateRoom.cshtml
+++ b/ReservationApp/ReservationApp/Views/Room/CreateRoom.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 <h1>Add new reservation</h1>
-<form asp-controller="Home" asp-action="CreateRoom" method="post" class="custom-form">
+<form asp-controller="Room" asp-action="CreateRoom" method="post" class="custom-form">
     <div class="mb-3">
         <label asp-for="RoomNumber"></label>
         <input class="form-control" asp-for="RoomNumber" />
