--- a/ReservationApp/ReservationApp/Views/Room/UpdateRoom.cshtml
+++ b/ReservationApp/ReservationApp/Views/Room/UpdateRoom.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 <h1>Update a room</h1>
-<form asp-controller="Home" asp-action="UpdateRoom" method="post">
+<form asp-controller="Room" asp-action="UpdateRoom" method="post">
     <input type="hidden" asp-for="Id" />
     <div class="mb-3">
         <label asp-for="RoomNumber"></label>
