--- a/ReservationApp/ReservationApp/Views/Account/DeleteUser.cshtml
+++ b/ReservationApp/ReservationApp/Views/Account/DeleteUser.cshtml
@@ -10,7 +10,7 @@
                 <input asp-for="Id" type="hidden"/>
                 <p>Are you sure you want to delete user @Model.Email?</p>
                 <button type="submit" class="btn btn-danger">Yes</button>
-                <a asp-controller="Home" asp-action="ListUsers" class="btn btn-secondary">No</a>
+                <a asp-controller="Admin" asp-action="ListUsers" class="btn btn-secondary">No</a>
             </form>
         </div>
     </div>
