--- a/ReservationApp/ReservationApp/Views/Admin/Delete.cshtml
+++ b/ReservationApp/ReservationApp/Views/Admin/Delete.cshtml
@@ -31,7 +31,7 @@
                 <input asp-for="Id" />
                 <p>Are you sure you want to delete?</p>
                 <button type="submit" class="btn btn-danger">Yes</button>
-                <a asp-controller="Home" asp-action="index" class="btn btn-secondary">No</a>
+                <a asp-controller="Admin" asp-action="index" class="btn btn-secondary">No</a>
             </form>
         </div>
     </div>
