--- a/ReservationApp/ReservationApp/Views/Admin/Update.cshtml
+++ b/ReservationApp/ReservationApp/Views/Admin/Update.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 <h1>Update a reservation</h1>
-<form asp-controller="Home" asp-action="Update" method="post">
+<form asp-controller="Admin" asp-action="Update" method="post">
     <input type="hidden" asp-for="reservation.Id" />
     <div class="mb-3">
         <label asp-for="reservation.Date">Date</label>
