--- a/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
+++ b/ReservationApp/ReservationApp/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ReservationApp</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Admin" asp-action="Index">ReservationApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,20 +27,20 @@
                         @if (signInManager.IsSignedIn(User) && (User.IsInRole("User") || User.IsInRole("Admin")))
                         {
                             <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Add new</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">New reservation</a>
                         </li>
                         }
                         
                         @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistics</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Statistics">Statistics</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListUsers">Users</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ListUsers">Users</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RoomsList">Rooms</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Room" asp-action="RoomsList">Rooms</a>
                             </li>
                         }
                         
