--- a/ReservationApp/ReservationApp/Views/Admin/ListUsers.cshtml
+++ b/ReservationApp/ReservationApp/Views/Admin/ListUsers.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<IdentityUser>
-
+@inject UserManager<IdentityUser> userManager
 @{
     ViewData["Title"] = "All Users";
 }
@@ -27,7 +27,11 @@
             </div>
             <div class="card-footer">
                 <a class="btn btn-outline-primary" asp-controller="Account" asp-action="ChangePassword" asp-route-id=@user.Id>Change password</a>
-                <a class="btn btn-outline-danger" asp-controller="Account" asp-action="DeleteUser" asp-route-id=@user.Id>Delete</a>
+                @if (!await userManager.IsInRoleAsync(user, "Admin"))
+                {
+                    <a class="btn btn-outline-danger" asp-controller="Account" asp-action="DeleteUser" asp-route-id=@user.Id>Delete</a>
+                }
+                
             </div>
         </div>
     }
