--- a/ReservationApp/ReservationApp/Views/Room/UpdateRoom.cshtml
+++ b/ReservationApp/ReservationApp/Views/Room/UpdateRoom.cshtml
@@ -14,6 +14,11 @@
         <input class="form-control" asp-for="Price" />
         <span class="text-danger" asp-validation-for="Price"></span>
     </div>
+    <div class="mb-3">
+        <label asp-for="MaxPeopleNumber"></label>
+        <input class="form-control" asp-for="MaxPeopleNumber" />
+        <span class="text-danger" asp-validation-for="MaxPeopleNumber"></span>
+    </div>
 
     <div class="my-btn">
         <button class="btn btn-secondary" type="submit">Save</button>
