--- a/ReservationApp/ReservationApp/Views/Home/Create.cshtml
+++ b/ReservationApp/ReservationApp/Views/Home/Create.cshtml
@@ -1,42 +1,42 @@
-﻿@model CompositeModel
+﻿@model Reservation
 @{
 }
 <h1>Add new reservation</h1>
 <form asp-controller="Home" asp-action="Create" method="post" class="custom-form">
     <div class="mb-3">
-        <label asp-for="reservation.Date"></label>
-        <input class="form-control" asp-for="reservation.Date"/>
-        <span class="text-danger" asp-validation-for="reservation.Date"></span>
+        <label asp-for="Date"></label>
+        <input class="form-control" asp-for="Date"/>
+        <span class="text-danger" asp-validation-for="Date"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="reservation.Owner"></label>
-        <input class="form-control" asp-for="reservation.Owner" />
-        <span class="text-danger" asp-validation-for="reservation.Owner"></span>
+        <label asp-for="Owner"></label>
+        <input class="form-control" asp-for="Owner" />
+        <span class="text-danger" asp-validation-for="Owner"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="reservation.City"></label>
-        <input class="form-control" asp-for="reservation.City" />
-        <span class="text-danger" asp-validation-for="reservation.City"></span>
+        <label asp-for="City"></label>
+        <input class="form-control" asp-for="City" />
+        <span class="text-danger" asp-validation-for="City"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="reservation.Address"></label>
-        <input class="form-control" asp-for="reservation.Address" />
-        <span class="text-danger" asp-validation-for="reservation.Address"></span>
+        <label asp-for="Address"></label>
+        <input class="form-control" asp-for="Address" />
+        <span class="text-danger" asp-validation-for="Address"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="reservation.RoomId">Room</label>
-        <select class="form-control" asp-for="reservation.RoomId" asp-items="Model.roomsSelectList"></select>
-        <span class="text-danger" asp-validation-for="reservation.RoomId"></span>
+        <label asp-for="NumberOfPeople">Number of people</label>
+        <input class="form-control" asp-for="NumberOfPeople" type="number" />
+        <span class="text-danger" asp-validation-for="NumberOfPeople"></span>
     </div>
 
     <div class="mb-3">
-        <label asp-for="reservation.NumberOfNights"></label>
-        <input class="form-control" asp-for="reservation.NumberOfNights" />
-        <span class="text-danger" asp-validation-for="reservation.NumberOfNights"></span>
+        <label asp-for="NumberOfNights">Number of Nights</label>
+        <input class="form-control" asp-for="NumberOfNights" type="number" />
+        <span class="text-danger" asp-validation-for="NumberOfNights"></span>
     </div>
 
     <div class="my-btn">
