--- a/ReservationApp/ReservationApp/Views/Admin/Index.cshtml
+++ b/ReservationApp/ReservationApp/Views/Admin/Index.cshtml
@@ -25,7 +25,7 @@
                     <td>@reservation.RoomId</td>
                     <td>
                         <a class="btn btn-outline-info" asp-controller="Admin" asp-action="Details" asp-route-id=@reservation.Id>Details</a>
-                        <a class="btn btn-outline-primary" asp-controller="Admin" asp-action="Update" asp-route-id=@reservation.Id>Edit</a>
+                        <a class="btn btn-outline-primary" asp-controller="Home" asp-action="Update" asp-route-id=@reservation.Id>Edit</a>
                         <a class="btn btn-outline-danger" asp-controller="Admin" asp-action="Delete" asp-route-id=@reservation.Id>Delete</a>
                     </td>
                 </tr>
